# Exercise1

./: .clang-format  .gitignore  CMakeLists.txt  Exercise 1.md  Exercise1.cpp  Exercise1_template.cpp  LICENSE  README.md
